<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>createAccountForm</class>
 <widget class="QWidget" name="createAccountForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>216</width>
    <height>129</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>216</width>
    <height>129</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>216</width>
    <height>129</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Change Password</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <layout class="QVBoxLayout" name="verticalLayout_2" stretch="2,1">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,0">
       <item>
        <widget class="QLineEdit" name="oldPasswordLineEdit">
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
         <property name="placeholderText">
          <string>Old Password</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="newPasswordLineEdit">
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
         <property name="placeholderText">
          <string>New Password</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="retypePasswordLineEdit">
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
         </property>
         <property name="placeholderText">
          <string>Retype The New Password</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="updatePasswordPushButton">
         <property name="text">
          <string>Update Password</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
